Fixed text alignment within filter chips

--- a/src/main/resources/static/assets/css/main.less
+++ b/src/main/resources/static/assets/css/main.less
@@ -71,6 +71,10 @@ body {
       }
     }
   }
+  .md-chip-content {
+    padding-top: 5px;
+    height: 100%;
+  }
   img {
     width: 75%;
     height: 100%;
